# misaka_mini_js

./: .gitignore  CMakeLists.txt  README.md  build.sh
include/: minijs.h  mj_error.h  utility.h
include/app/: app.h
include/cli/: cli.h
include/common/: console.h  log.h  mj_error.h  utility.h  version.h
include/platform/: mj_platform.h
include/runtime/: runtime.h  stream.h
src/: main.c  minijs.c  utility.c
src/app/: app.c
src/cli/: cli.c
src/common/: console.c  log.c  mj_error.c  utility.c
src/platform/: platform_posix.c  platform_win.c
src/runtime/: runtime.c  stream_file.c
